--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <script>
+    console.log(window.complete);
       window.api = new jasmine.JsApiReporter({});
       jasmine.getEnv().addReporter(window.api);
 
@@ -48,7 +49,17 @@
         it("can be named", function(){
           // cat.setName('Bob');
           expect(cat.name).toEqual('Bob');
-        })
+        });
+
+        xit("hasn't finished writing a test", function(){
+
+        });
+      });
+
+      xdescribe("some dog properties", function(){
+        it("can bark", function(){
+
+        });
       });
     </script>
   </body>
